--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,15 +1,13 @@
 /* Mobile & Tablet */
+
 @media (max-width: 1023px) {
     :root {
-        
-    --header-hight: 68px;
-    --navbar-hight: 0px;
+        --header-hight: 68px;
+        --navbar-hight: 0px;
     }
-
     .hide-on-mobile-tablet {
         display: none;
     }
-
     .header {
         position: fixed;
         z-index: 10;
@@ -17,34 +15,31 @@
         right: 0;
         left: 0;
     }
-
     .app__container {
         margin-top: calc(var(--header-hight) + var(--header-sort-bar-height));
     }
-
     .header__cart-list {
         position: fixed;
         top: var(--header-hight);
         right: 0;
         width: 100%;
-        padding: 0 calc((100% - 644px)/2); /* Quả này chất vcl*/
+        padding: 0 calc((100% - 644px)/2);
+        /* Quả này chất vcl*/
     }
-
     .header__cart-list::after {
         display: none;
     }
-
     .header__sort-bar {
         display: flex;
     }
 }
 
 /* Tablet */
+
 @media (min-width: 740px) and (max-width: 1023px) {
     .hide-on-tablet {
         display: none;
     }
-
     .header__cart {
         width: 80px;
         text-align: right;
@@ -52,9 +47,48 @@
 }
 
 /* Mobile */
+
 @media (max-width: 739px) {
     .hide-on-mobile {
         display: none;
     }
-
+    .header-with-search {
+        justify-content: space-between;
+    }
+    .header__cart, .header__logo {
+        width: unset;
+    }
+    .header__search-checkbox:checked~.header__search {
+        display: flex;
+    }
+    .header__search {
+        position: fixed;
+        top: var(--header-hight);
+        left: 0;
+        right: 0;
+        z-index: 1;
+        height: 46px;
+        box-shadow: 0 3px 4px rgba(0, 0, 0, 0.1);
+        padding: 0 8px;
+        animation: mobileSearchSideIn linear .3s;
+        display: none;
+        border-radius: 0;
+    }
+    .header__search-history {
+        position: fixed;
+        top: calc(var(--header-hight) + var(--header-sort-bar-height));
+        width: 100%;
+        left: 0;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+    }
+    @keyframes mobileSearchSideIn {
+        from {
+            opacity: 0;
+            top: calc( var(--header-hight) /2);
+        }
+        to {
+            opacity: 1;
+            top: var(--header-hight);
+        }
+    }
 }
